Limpeza do repositório

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,23 @@
-# Arquivo .env
-# Configurações do Banco de Dados
+# Configurações do Sistema RAG Multiagente
+# Copie para .env e configure os valores
 
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=
-DB_USER=postgres
-DB_PASSWORD=
-DB_SCHEMA=dbo
+# Database
+DATABASE_URL=sqlite:///data/unified_system.db
+POSTGRES_URL=postgresql://user:password@localhost:5432/rag_system
 
-# Configurações do Ollama
-OLLAMA_URL=http://localhost:11434
-OLLAMA_MODEL=llama3
+# LLM Configuration
+OLLAMA_BASE_URL=http://localhost:11434
+DEFAULT_MODEL=llama3.1:8b
 
-# Configurações do Sistema
-VECTOR_DIMENSION=384
-FAISS_INDEX_TYPE=IndexFlatIP
+# API Configuration
+API_HOST=0.0.0.0
+API_PORT=8000
+DEBUG=false
+
+# Logging
+LOG_LEVEL=INFO
+LOG_FILE=logs/system.log
+
+# FAISS Configuration
+FAISS_INDEX_PATH=data/knowledge_base/faiss_index.faiss
+EMBEDDING_MODEL=sentence-transformers/paraphrase-multilingual-MiniLM-L12-v2
