--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,32 @@
-# pip install -r requirements.txt
+# Core dependencies
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+sqlalchemy==2.0.23
+alembic==1.12.1
 
-# Dependências básicas do sistema
-pandas>=2.0.0
-psycopg2-binary>=2.9.0
-sqlalchemy>=2.0.0
-python-dotenv>=1.0.0
-faiss-cpu>=1.7.0
-sentence-transformers>=2.2.0
-requests>=2.28.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
+# Database
+sqlite3
+psycopg2-binary==2.9.7
 
-# Dependências para Fase 4 - Interface de Revisão Humana
-fastapi>=0.104.0
-uvicorn[standard]>=0.24.0
-pydantic>=2.4.0
+# Machine Learning
+sentence-transformers==2.2.2
+faiss-cpu==1.7.4
+numpy==1.24.3
+pandas==2.0.3
 
-# Dependências opcionais para interface web
-# streamlit>=1.28.0  # Para dashboard alternativo
-# dash>=2.14.0       # Para dashboard interativo
+# HTTP Client
+httpx==0.25.0
+requests==2.31.0
 
-# Dependências opcionais para processamento de documentos
-# PyPDF2>=3.0.0      # Para extração de texto de PDFs (NESH)
+# Utilities
+python-dotenv==1.0.0
+click==8.1.7
+rich==13.6.0
+loguru==0.7.2
 
-# Dependências de desenvolvimento e teste
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
+# Development
+pytest==7.4.3
+pytest-asyncio==0.21.1
+black==23.10.1
+flake8==6.1.0
